[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Veni-Vidi-Programmavi <pilouhenry@icloud.com"]
packages = [{ include = "app" }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]
